Este commit aplicado ajusta o comunicacao entre camadas.
